<resources>
    <array name="classes">
        <item>Android</item>
        <item>Python</item>
        <item>C++</item>
        <item>Java</item>
        <item>HTML</item>

    </array>
    <string name="app_name">Pearl Infotech</string>
    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="emptyerror">Field Cannot be Empty</string>
    <string name="login">Login</string>
    <string name="namechcklst">name</string>
    <string name="submitattfac">Submit</string>
    <string name="textviewaccfac">TextView</string>
    <string name="tchname">Teacher Name</string>

    <string name="performance_pf">Performance</string>
    <string name="student_name_pf">Student Name</string>
    <string name="topic_pf">Topic</string>
    <string name="total_pf">Total</string>
    <string name="correct_pf">Correct</string>
    <string name="incorrect_pf">Incorrect</string>
    <string name="submit_pf">Submit</string>

    <string name="fee_admin_tv1">Fee Admin</string>
    <string name="student_name_fee_admin">Student Name</string>
    <string name="total_fees_fee_admin">Total Fees</string>
    <string name="course_fee_admin">Course</string>
    <string name="paid_fee_admin">Paid</string>
    <string name="submit_fee_admin">Submit</string>

    <string name="performance_ps">Performance</string>
    <string name="name_ps">Name</string>
    <string name="topic_ps">Topic</string>
    <string name="total_ps">Total</string>
    <string name="correct_ps">Correct</string>
    <string name="incorrect_ps">Incorrect</string>
    <string name="percentage_ps">Percentage</string>
    <string name="test_name">Test Name</string>


    <string-array name="periods">
        <item>CMAT</item>
        <item>CAT</item>
    </string-array>

    <string-array name="pa">
        <item>Present</item>
        <item>Absent</item>
    </string-array>

    <string-array name="installment">
        <item>Full</item>
        <item>Half</item>
    </string-array>

    <string-array name="mode">
        <item>Cheque</item>
        <item>Cash</item>
    </string-array>

    <string-array name="courselist">
32
        <item>Java</item>
        <item>Python</item>
        <item>C</item>
        <item>C++</item>
        <item>SQL</item>
        <item>MySQL</item>
        <item>Oracle</item>
        <item>PHP</item>
        <item>Javascript</item>
        <item>JQuery</item>
        <item>Android</item>
        <item>Visual Basics</item>
        <item>Bootstrap</item>
        <item>Django</item>
        <item>HTML</item>
        <item>CSS</item>
        <item>VB.net</item>
        <item>Tally</item>
        <item>MS Excel</item>
        <item>CAT</item>
        <item>CMAT</item>
        <item>GMAT</item>
        <item>GRE</item>
        <item>BCA</item>
        <item>MCA</item>
        <item>SNAP</item>
        <item>NIMCET</item>
        <item>IBPS</item>
        <item>SBI SO</item>
        <item>IELTS</item>
        <item>5-12 GSEB</item>
        <item>5-12 CBSE</item>


    </string-array>
</resources>
