<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Performance.Performance_faculty">

    <include
        android:id="@+id/performancefacultytoolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectanglehomescreen"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/performancefacultytoolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/performance_pf"
            android:textColor="@color/colorAccent"
            android:textSize="39sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/student_name_pf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/testname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/test_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/testdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="Test Date"
            android:importantForAutofill="no"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/topic_pf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/total_pf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/correct_pf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/incorrect_pf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            tools:layout_editor_absoluteX="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/btnbg"
                android:gravity="center"
                android:text="@string/submit_pf"
                android:textAllCaps="false"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>