<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.andro0id.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".Admin.AddFaculty">

    <include
        android:id="@+id/adminfeestoolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rectanglehomescreen"
        android:orientation="vertical"
        android:padding="60dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/fee_admin_tv1" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/student_name_fee_admin"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/total_fees_fee_admin"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.221"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/course_fee_admin"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            tools:layout_editor_absoluteX="8dp" />


        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:background="@drawable/btnsstroke"
            android:ems="10"
            android:hint="@string/paid_fee_admin"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="#2B2727"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.701"
            tools:layout_editor_absoluteX="8dp" />

        <Spinner
            android:id="@+id/feeadmininstallment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:entries="@array/installment"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.549"
            tools:layout_editor_absoluteX="8dp" />

        <Spinner
            android:id="@+id/feeadminmode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btnsstroke"
            android:entries="@array/mode"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.549"
            tools:layout_editor_absoluteX="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/btnbg"
                android:text="@string/submit_fee_admin"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.171"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.863" />


        </LinearLayout>



    </LinearLayout>


</LinearLayout>
